--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 python = ">=3.9,<4.0"
 pyyaml = "^6.0"
 art = "^5.2"
+requests = "^2.32.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.4"
